=======
CHANGES
=======

0.6
===

setuptools
----------

* Packages required at build time where not fully present at install time.
  This closes http://bitbucket.org/tarek/distribute/issue/12.

* Protected against failures in tarfile extraction. This closes
  http://bitbucket.org/tarek/distribute/issue/10.

* Made Jython api_tests.txt doctest compatible. This closes
  http://bitbucket.org/tarek/distribute/issue/7.

* sandbox.py replaced builtin type file with builtin function open. This
  closes http://bitbucket.org/tarek/distribute/issue/6.

* Immediately close all file handles. This closes
  http://bitbucket.org/tarek/distribute/issue/3.

* Added compatibility with Subversion 1.6. This references
  http://bitbucket.org/tarek/distribute/issue/1.

pkg_resources
-------------

* Allow to find_on_path on systems with tight permissions to fail gracefully.
  This closes http://bitbucket.org/tarek/distribute/issue/9.

* Corrected inconsistency between documentation and code of add_entry.
  This closes http://bitbucket.org/tarek/distribute/issue/8.

* Immediately close all file handles. This closes
  http://bitbucket.org/tarek/distribute/issue/3.


easy_install
------------

* Immediately close all file handles. This closes
  http://bitbucket.org/tarek/distribute/issue/3.
